fixed bug on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -35,6 +35,7 @@ body {
     .main {
       flex-direction: column;
       overflow-y: scroll;
+      overflow-x: hidden;
 
       .lyrics {
         padding: 0 25vw;
